Bug 152211 - Connector rendered incorrectly if the line thickness of the shape and the connector differ greatly in Impress
Summary: Connector rendered incorrectly if the line thickness of the shape and the con...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, filter:pptx, implementationError
Depends on:
Blocks: PPTX-line-connector-import
  Show dependency treegraph
 
Reported: 2022-11-25 10:29 UTC by NISZ LibreOffice Team
Modified: 2024-02-20 01:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (19.99 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-11-25 10:30 UTC, NISZ LibreOffice Team
Details
Compaire Powerpoint (left), LO (right) (51.39 KB, image/png)
2022-11-25 10:31 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-25 10:29:26 UTC
Description:
If you create a connector for a shape in PPTX and the shape and connector have different line thicknesses, 
then the line thickness of the shape will affect the appearance of the connector.

Steps to Reproduce:
1. Open attachement file in LO.
2. Compare the file created in PPTX.

Actual Results:
Connector appear incorrectly.

Expected Results:
Connector looks similar then in PPTX.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-25 10:30:09 UTC
Created attachment 183764 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-25 10:31:47 UTC
Created attachment 183765 [details]
Compaire Powerpoint (left), LO (right)
Comment 3 Stéphane Guillou (stragu) 2022-11-25 14:27:55 UTC
Seems to have appeared in 7.4:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Not in 7.3:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2022-11-25 14:37:49 UTC
First bad commit:

commit cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8
author	Tibor Nagy <nagy.tibor2@nisz.hu>	Thu Mar 10 08:42:12 2022 +0100
committer	László Németh <nemeth@numbertext.org>	Tue Mar 29 16:12:45 2022 +0200
tree c7e02c1e50525e42d7b15d000398631be3c7c697
parent bc601af632861896bdfaa14c96daf1a7ffdfcf71

tdf#89449 PPTX import: fix line connectors

I assume you already knew, Tibor! :)
Thanks for working on it.
Comment 5 Commit Notification 2022-12-05 11:20:56 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/400e44cebd993f4b9b3d878fb9264f99e005c9fb

tdf#152211 PPTX import: fix connector position based on line width

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-12-05 21:18:57 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/df6ff2392701b04bbafddb1119e1ac43cac71fae

tdf#152211 PPTX import: fix connector position based on line width

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Stéphane Guillou (stragu) 2022-12-07 14:00:40 UTC
Fix verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Do you have follow-up commits, Tibor? If not, please feel free to mark as verified.
Comment 8 Stéphane Guillou (stragu) 2022-12-07 14:51:45 UTC
Apologies, Tibor, will let you mark it as Resolved - Fixed.
Cheers.
Comment 9 NISZ LibreOffice Team 2022-12-14 15:14:09 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded